--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
+body,
+main {
   font-family: 'Gabarito', sans-serif;
 }
